// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Helper labelLocales 1`] = `
[
  "ar",
  "bg",
  "cs",
  "da",
  "de",
  "el",
  "en",
  "en_US_saprigi",
  "en_US_saptrc",
  "es",
  "es_MX",
  "fi",
  "fr",
  "he",
  "hr",
  "hu",
  "it",
  "ja",
  "kk",
  "ko",
  "ms",
  "nl",
  "no",
  "pl",
  "pt",
  "ro",
  "ru",
  "sh",
  "sk",
  "sl",
  "sv",
  "th",
  "tr",
  "uk",
  "vi",
  "zh_CN",
  "zh_TW",
]
`;

exports[`Helper messageLocales 1`] = `
[
  "ar",
  "bg",
  "cs",
  "da",
  "de",
  "el",
  "en",
  "en_US_saprigi",
  "es",
  "fi",
  "fr",
  "he",
  "hr",
  "hu",
  "it",
  "ja",
  "kk",
  "ko",
  "ms",
  "nl",
  "no",
  "pl",
  "pt",
  "ro",
  "ru",
  "sh",
  "sk",
  "sl",
  "sv",
  "th",
  "tr",
  "uk",
  "vi",
  "zh_CN",
  "zh_TW",
]
`;
